# cpputils

./: .gitignore  CMakeLists.txt  conanfile.py
include/cpputils/: fileops.h  shell.h  string.h
src/: CMakeLists.txt  fileops.cc  shell.cc  string.cc
src/fileops/: CMakeLists.txt  fileops.cc
src/string/: CMakeLists.txt  utils.cc
src/utils/: CMakeLists.txt  utils.cc
test/: CMakeLists.txt  test_fileops.cc  test_shell.cc  test_string.cc
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: test_fileops.cc  test_shell.cc  test_string.cc  test_utils.cc
